<resources>
    <string name="app_name">iStream</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="fullname_hint">Full name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="create_account_button">Create account</string>
    <string name="url_hint">YouTube URL</string>
    <string name="signout_button">Sign out</string>
    <string name="play_button">Play</string>
    <string name="add_button">Add to playlist</string>
    <string name="playlist_button">My playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_heading">My Playlist</string>
</resources>